--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/icertis/0caaa3d5-e80d-4d4c-8778-ead9f1990b6b'>Icertis - Senior Program Manager - Professional Services</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXKaVfww&k=Job&j=oEj39fwT&__jvst=Employee&__jvsd=sq3N0iw3&__jvsc=Twitter&bid=npjupMwS'>SCP Health Careers - Project Manager II</a></h5> 
+<p><span class="badge badge-light">Lafayette, Louisiana</span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://honeywell.join.com/jobs/464753-project-manager-m-f-d-hamburg-berlin-stuttgart'>Job @ Honeywell (Hamburg): Project Manager (m/f/d)... | JOIN</a></h5> 
+<p><span class="badge badge-light">Hamburg Hamburg, Deutschland</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698571973-technical-project-manager-korean-speaking-is-mandatory'>Bey Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.echinacities.com/jobchapter/1354720851?fromat=26'>Project Manager - Jobs in Shanghai?????????????????????????</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -49,18 +65,18 @@
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698567797-rexroth-project-manager-bluesky'>Bosch Group Rexroth ? Project manager - BlueSky | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Budapest</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AnalygenceInc/743999698566905-program-manager-army-recruiting-resources-command'>Analygence, Inc. Program Manager - ARMY Recruiting Resources Command | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AnalygenceInc/743999698566905-program-manager-army-recruiting-resources-command'>Analygence, Inc. Program Manager - ARMY Recruiting Resources Command | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/knotel/jobs/1480949?gh_src=0d88a0831'>Job Application for Construction Project Manager at Knotel</a></h5> 
+<h5><a href='https://boards.greenhouse.io/knotel/jobs/1480949?gh_src=0d88a0831'>Job Application for Construction Project Manager at Knotel</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aventri/5765cac1-d9f3-4bdf-9991-e10ffa1aafb7'>Aventri - Technical Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aventri/5765cac1-d9f3-4bdf-9991-e10ffa1aafb7'>Aventri - Technical Project Manager</a></h5> 
 <p><span class="badge badge-light">Norwalk, CT</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -72,7 +88,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://cognizanthc.referrals.selectminds.com/jobs/network-project-manager-1758'>Network Project Manager - EmblemHealth Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cognizanthc.referrals.selectminds.com/jobs/network-project-manager-1758'>Network Project Manager - EmblemHealth Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -108,7 +124,7 @@
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cennox.applytojob.com/apply/6SAHxmTkpy/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
+<h5><a href='http://cennox.applytojob.com/apply/6SAHxmTkpy/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -191,11 +207,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nortekairsolutions-careers-fr/job/oP7sbfwj'>Carri?res Nortek Air Solutions - Senior Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nortekairsolutions-careers-fr/job/oP7sbfwj'>Carri?res Nortek Air Solutions - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/project-manager-bpdv-cqtyr6zdWaICoXfFy'>Project Manager #0185 job at Aria Systems in San Francisco, CA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/project-manager-bpdv-cqtyr6zdWaICoXfFy'>Project Manager #0185 job at Aria Systems in San Francisco, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CASan Francisco, CA San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -203,7 +219,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/oJlsbfwr'>umlaut North America Careers - Project Manager Operations (PMO)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/umlaut/job/oJlsbfwr'>umlaut North America Careers - Project Manager Operations (PMO)</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -247,7 +263,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698541416-technical-project-manager-with-agile-scrum-kanban'>BuzzClan LLC Technical Project Manager with Agile, Scrum & Kanban | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698541416-technical-project-manager-with-agile-scrum-kanban'>BuzzClan LLC Technical Project Manager with Agile, Scrum & Kanban | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -259,7 +275,7 @@
 <p><span class="badge badge-light">Denver, Colorado  New York, New York  Scottsdale, Arizona</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/46d91d393b0d-project-manager'>Project Manager</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/46d91d393b0d-project-manager'>Project Manager</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -271,7 +287,7 @@
 <p><span class="badge badge-light">Los Angeles, CA  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://kimmel-associates.breezy.hr/p/83bf020f4561-project-manager-lead-detailer'>Project Manager - Lead Detailer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/83bf020f4561-project-manager-lead-detailer'>Project Manager - Lead Detailer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -353,7 +369,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://henkels.referrals.selectminds.com/jobs/associate-project-manager-i-1617'>Associate Project Manager I - Careers Careers</a></h5> 
+<h5><a href='https://henkels.referrals.selectminds.com/jobs/associate-project-manager-i-1617'>Associate Project Manager I - Careers Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -377,7 +393,7 @@
 <p><span class="badge badge-light">Redmond, WA  ?  Redmond, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AltagramGmbH/743999698362758-localization-project-manager-m-f-d-video-games'>Altagram GmbH Localization Project Manager (m/f/d) Video Games | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AltagramGmbH/743999698362758-localization-project-manager-m-f-d-video-games'>Altagram GmbH Localization Project Manager (m/f/d) Video Games | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany  Berlin, Germany Seoul Montreal, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -405,7 +421,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1939007'>Job Application for Program Manager, Company Planning at Thumbtack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thumbtack/jobs/1939007'>Job Application for Program Manager, Company Planning at Thumbtack</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -431,22 +447,6 @@
 <hr/>
 <h5><a href='https://jobs.jobvite.com/p3-americas/job/o5ksbfwM'>umlaut North America Careers - Aerospace Project Manager</a></h5> 
 <p><span class="badge badge-light">North America Canada</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/p3-americas/job/oJlsbfwr'>umlaut North America Careers - Project Manager Operations (PMO)</a></h5> 
-<p><span class="badge badge-light">North America Montreal Canada</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/p3-americas/job/oWlsbfwE'>umlaut North America Careers - Quality Project Manager</a></h5> 
-<p><span class="badge badge-light">North America Montreal Canada</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/p3-americas/job/otmsbfwc'>umlaut North America Careers - Aerospace Project Manager - Supply Chain</a></h5> 
-<p><span class="badge badge-light">North America Montreal Canada</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697978353-senior-program-manager-account-manager'>CapTech Consulting Senior Program Manager / Account Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
